[package]
name = "hearing-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.16.0"
crossterm = "0.25.0"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
plotters = "0.3.4"
chrono = "0.4.23"
csv = "1.1"